Support and require Java 21